tests/compilation_error/void_comparison.ll
def voidFunc():
    pass

print voidFunc() == voidFunc()
